styles/style.css
.content-section {
  font-weight: 400;
  /* fixme */
  letter-spacing: -0.1px;
}

.header {
  padding: 92px 49px 92px 51px;
  display: grid;
  grid-template-columns: repeat(4, 1fr) repeat(1, 2fr) repeat(4, 1fr);
  place-content: space-evenly;
  font-size: 18px;
}

.header__menu {
  grid-column: span 4;
  display: flex;
  align-items: center;
}

.header__links-list {
  display: flex;
  flex-direction: row;
  gap: 31px;
  list-style-type: circle;
}

.header__link {
  text-decoration: underline;
  text-underline-offset: 21%;
}

.header__link-active {
  text-decoration: none;
}

.list-item_no_bullit {
  list-style: none;
}

.header__logo {
  display: block;
  grid-column: 5 / 6;
  justify-self: center;
}

.header__logo-image {
  width: 148px;
  height: 105px;
}

.header__address {
  grid-column: 6 / -1;
  display: flex;
  flex-direction: column;
  text-wrap: nowrap;
  justify-content: center;
  justify-self: end;
  line-height: 1.35;
  font-style: normal;
}

.header__address-phone,
.header__address-email {
  text-decoration: underline;
  text-underline-offset: 17%;
}

